# amp-extras.nvim

./: .gitignore  Cargo.toml  Cross.toml  DASHX_PLAN.md  README.md  justfile  test_amp_integration.txt
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml
crates/core/: Cargo.toml
crates/core/src/: autocmds.rs  conversion.rs  errors.rs  ffi.rs  ide_ops.rs  lib.rs  lockfile.rs  notifications.rs  runtime.rs  util.rs
crates/core/src/autocmds/: diagnostics_changed.rs  mod.rs  selection_changed.rs  visible_files_changed.rs
crates/core/src/commands/: account_update.rs  mod.rs  prompts.rs  send_buffer.rs  send_file_ref.rs  send_line_ref.rs  send_selection.rs  send_selection_ref.rs  server_status.rs
crates/core/src/db/: mod.rs  prompts.rs  prompts_test.rs  schema.rs
crates/core/src/ide_ops/: edit_file.rs  get_diagnostics.rs  mod.rs  nvim_notify.rs  read_file.rs
crates/core/src/nvim/: buffer.rs  cursor.rs  mod.rs  path.rs  selection.rs  window.rs
crates/core/src/rpc/: mod.rs  router.rs
crates/core/src/server/: connection.rs  connection_async.rs  event_bridge.rs  events.rs  hub.rs  mod.rs  ws_server.rs
crates/core/tests/: integration_tests.rs  websocket_client.rs
lua/amp_extras/: ffi.lua  init.lua  selection.lua  visible_files.lua
lua/amp_extras/amptab/: cache.lua  client.lua  context.lua  enrichment.lua  ghost.lua  init.lua  navigator.lua  preloader.lua  source.lua.bak  treesitter.lua
lua/amp_extras/blink/: source.lua
lua/amp_extras/commands/: init.lua  send.lua
lua/amp_extras/commands/dashx/: api.lua  init.lua
lua/amp_extras/commands/ui/: init.lua  send_message_box.lua
lua/amp_extras/commands/ui/dashx/: form.lua  picker.lua
plugin/: amp_extras.lua
schemas/: amp-extras-permission-rule.json  amp-extras-permissions.json  common.json  config.json  content.json  environment.json  mcp-permission.json  mcp-permissions.json  mcp-server.json  mcp-servers.json  messages.json  permission-rule.json  permissions.json  stream-json.json  thread.json  tool-info.json  tool-list-item.json  tools-list.json  usage.json
tests/: automated_websocket_test.lua  check_commands.lua  check_server_status.lua  debounce_test.lua  debug_ffi.lua  notification_test.lua  run_integration_tests.sh  server_test.lua  simple_start.lua  start_amp_server.lua  test_amp_cli.sh  test_amp_cli_real.sh  test_ide_methods.sh  test_user_messages_e2e.md  test_websocket.sh  test_with_amp_cli.md  user_message_test.lua  visual_selection_test.lua  websocket_e2e_test.sh  websocket_integration.rs
tests-integration/: README.md
tests-integration/src/: commands.rs  diagnostics.rs  lib.rs  uri.rs
