[workspace]
resolver = "2"
members = ["crates/core", "tests-integration"]

[workspace.package]
version = "0.1.0"
authors = ["wrath"]
edition = "2021"
license = "MIT"
repository = "https://github.com/wrath-codes/amp-extras-rs"

[workspace.dependencies]
# Neovim integration
nvim-oxi = { version = "0.6", features = ["neovim-0-10", "libuv"] }

# Database
dotenvy = "0.15"
rusqlite = "0.37.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Lazy statics
once_cell = "1.21"

# UUIDs for sync-ready IDs
uuid = { version = "1.18", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# File system
notify = "8.2"
dirs = "6.0"

# Threading
crossbeam = "0.8"
walkdir = "2.5"

# WebSocket server
tungstenite = { version = "0.28", default-features = true }
url = "2.5"
rand = "0.9"
crossbeam-channel = "0.5"
subtle = "2.6"
http = "1.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
